# planerix4

./: .env.example  .env.lightrag.example  .gitignore  1.1 CRM RAW-6.json  1.2 Facebook RAW-2.json  2 Staging-7.json  ADS_ENDPOINT_SUCCESS_OCT14.md  ADS_MARKETING_REAL_DATA_PLAN.md  ADS_MARKETING_REAL_DATA_SUCCESS.md  ADS_PAGE_COMPLETE_OCT14.md  ANALYTICS_AUDIT_INDEX.md  ANALYTICS_ENDPOINTS_FIXED_OCT14.md  ANALYTICS_FULL_AUDIT_OCT14.md  ANALYTICS_UPGRADE_OCT14_2025.md  AUDIT_SUMMARY.md  AUTHENTICATION_ROOT_CAUSE_ANALYSIS.md  AUTHENTICATION_RULES.md  BACKEND_UPGRADE_COMPLETE.md  CALENDAR_API_IMPLEMENTATION_COMPLETE.md  CAMPAIGNS_TO_PAUSE.md  CLAUDE.md  COMPLETE_AUTH_FIX_SCRIPT.sh  CREATE_v6_ANALYTICS_VIEWS.sql  Caddyfile  DATAANALYTICS_FINAL_UPDATE_OCT6.md  DATAANALYTICS_GAP_ANALYSIS.md  DATAANALYTICS_V5_IMPLEMENTATION_STATUS.md  DEPLOYMENT_AND_CONFIGURATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_REPORT_OCT14_FINAL.md  DEPLOYMENT_SUCCESS_OCT14.md  DEPLOYMENT_SUCCESS_OCT23.md  DEPLOYMENT_SUCCESS_OCT23_CRITICAL_FIX.md  DEPLOYMENT_SUCCESS_OCT23_FINAL.md  DEPLOYMENT_SUCCESS_REPORT.md  DETAILED_IMPLEMENTATION_PLAN.md  FILES_INDEX.md  FINAL_DEPLOYMENT_SUMMARY_OCT23.md  FINAL_V9_API_COMPLETE_OCT23.md  FINAL_VERIFICATION_OCT14.md  (+109 more)
apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.bak.2025-08-21_1031  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2025_10_15_1410_merge_heads.py  (+10 more)
apps/api/liderix_api/: auth_utils.py  db.py  db_client_itstep.py  enums.py  main.py  main.py.backup  test_analytics_endpoint.py
(+485 files in other folders)
