[tool.poetry]
name = "liderix-api"
version = "0.1.0"
description = "Backend API for Liderix Platform"
authors = ["Kirill <kprolieiev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "liderix_api" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uvicorn = { version = ">=0.35.0,<0.36.0", extras = ["standard"] }
fastapi = ">=0.115.14,<0.116.0"
sqlalchemy = ">=2.0.41,<3.0.0"
alembic = ">=1.16.2,<2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
pydantic = { version = ">=2.11.7,<3.0.0", extras = ["email"] }
pydantic-settings = ">=2.2.1,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
passlib = { version = ">=1.7.4,<2.0.0", extras = ["bcrypt"] }
bcrypt = "4.0.1"
python-jose = { version = ">=3.5.0,<4.0.0", extras = ["cryptography"] }
pyjwt = ">=2.10.1,<3.0.0"
greenlet = ">=3.2.3,<4.0.0"
redis = ">=5.0.0,<6.0.0"
resend = ">=2.11.0,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"
jinja2 = ">=3.1.6,<4.0.0"
aiohttp = ">=3.12.15,<4.0.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.2"
ruff = "^0.6.8"
black = "^24.8.0"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"